# qai-sdk

./: .cursorrules  .env.example  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  SECURITY.md  deny.toml  playground.html
.agents/rules/: RULES.md
.agents/skills/error-handling/: SKILL.md
.agents/skills/provider-implementation/: SKILL.md
.agents/skills/testing-patterns/: SKILL.md
.agents/workflows/: agent-setup.md  chat-generation.md  mcp-integration.md  middleware.md  publish-release.md  registry-setup.md  run-examples.md  streaming.md  structured-output.md  tool-calling.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: agent.md  anthropic.md  core.md  deepseek.md  google.md  mcp.md  middleware.md  openai.md  openai_compatible.md  registry.md  structured.md  xai.md
examples/: anthropic_example.rs  chat_basic.rs  chat_multimodal.rs  chat_streaming.rs  completion.rs  deepseek_example.rs  dummy_mcp.js  embedding.rs  error_handling.rs  google_example.rs  image_generation.rs  openai_compatible.rs  openai_example.rs  provider_factory.rs  responses_api.rs  speech_transcription.rs  test_mcp.rs  test_mcp_agent.rs  test_mcp_prompts.rs  test_mcp_resources.rs  test_mcp_subscriptions.rs  tool_calling.rs  xai_example.rs
qai-anthropic/: Cargo.toml
qai-anthropic/src/: error.rs  lib.rs  tests.rs  tools.rs  types.rs
qai-core/: Cargo.toml
qai-core/src/: error.rs  lib.rs  tests.rs  types.rs
qai-deepseek/: Cargo.toml
qai-deepseek/src/: error.rs  lib.rs  types.rs
qai-google/: Cargo.toml
qai-google/src/: embedding.rs  error.rs  image.rs  lib.rs  tests.rs  tools.rs  types.rs
qai-openai/: Cargo.toml
qai-openai-compatible/: Cargo.toml
qai-openai-compatible/src/: completion.rs  embedding.rs  error.rs  image.rs  lib.rs  types.rs
qai-openai/src/: completion.rs  embedding.rs  error.rs  image.rs  lib.rs  responses.rs  responses_types.rs  speech.rs  tests.rs  tools.rs  transcription.rs  types.rs
qai-openai/tests/: integration_tests.rs
qai-test-utils/: Cargo.toml
qai-test-utils/src/: lib.rs  mock_server.rs
qai-xai/: Cargo.toml
qai-xai/src/: error.rs  image.rs  lib.rs  responses.rs  tools.rs
src/: lib.rs
src/anthropic/: error.rs  mod.rs  tests.rs  tools.rs
src/core/: agent.rs  error.rs  middleware.rs  mod.rs  registry.rs  structured.rs  tests.rs  types.rs
src/deepseek/: error.rs  mod.rs  types.rs
src/google/: embedding.rs  error.rs  image.rs  mod.rs  tests.rs  tools.rs  types.rs
src/mcp/: agent.rs  client.rs  mod.rs
src/openai/: completion.rs  embedding.rs  error.rs  image.rs  mod.rs  responses.rs  responses_types.rs  speech.rs  tests.rs  tools.rs  transcription.rs  types.rs
src/openai_compatible/: completion.rs  embedding.rs  error.rs  image.rs  mod.rs
src/test_utils/: mock_server.rs  mod.rs
src/xai/: error.rs  image.rs  mod.rs  responses.rs  tools.rs  types.rs
steps/: deep-implementation-map.md  implementation-roadmap.md  qai-sdk.code-workspace
