[package]
name = "qai-sdk"
version = "0.1.0"
edition = "2021"
description = "A modular, type-safe Rust SDK for AI providers — OpenAI, Anthropic, Google Gemini, DeepSeek, xAI, and any OpenAI-compatible endpoint"
license = "MIT OR Apache-2.0"
authors = ["Keyvan Arasteh <keyvan.arasteh@live.com>"]
repository = "https://github.com/keyvanarasteh/qai-sdk"
homepage = "https://github.com/keyvanarasteh/qai-sdk"
documentation = "https://docs.rs/qai-sdk"
readme = "README.md"
keywords = ["ai", "llm", "openai", "anthropic", "gemini"]
categories = ["api-bindings", "asynchronous"]
rust-version = "1.70"

[dependencies]
qai-core = { path = "qai-core", version = "0.1.0" }
qai-anthropic = { path = "qai-anthropic", version = "0.1.0" }
qai-google = { path = "qai-google", version = "0.1.0" }
qai-openai = { path = "qai-openai", version = "0.1.0" }
qai-deepseek = { path = "qai-deepseek", version = "0.1.0" }
qai-xai = { path = "qai-xai", version = "0.1.0" }
qai-openai-compatible = { path = "qai-openai-compatible", version = "0.1.0" }
tokio = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
dotenvy = "0.15"

[workspace]
members = ["qai-anthropic", "qai-core", "qai-deepseek", "qai-google", "qai-openai", "qai-openai-compatible", "qai-test-utils", "qai-xai"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Keyvan Arasteh <keyvan.arasteh@live.com>"]
repository = "https://github.com/keyvanarasteh/qai-sdk"
homepage = "https://github.com/keyvanarasteh/qai-sdk"
rust-version = "1.70"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"

[workspace.lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
missing_docs_in_private_items = "warn"
