[package]
name = "qai-sdk"
version = "0.1.1" # Bumped to 0.1.1 for unified release
edition = "2021"
description = "Universal Rust SDK for AI Providers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/keyvanarasteh/qai-sdk"
homepage = "https://github.com/keyvanarasteh/qai-sdk"
documentation = "https://docs.rs/qai-sdk"
keywords = ["ai", "llm", "openai", "claude", "gemini"]
categories = ["api-bindings", "web-programming::http-client"]

[features]
default = ["openai", "anthropic", "google", "deepseek", "xai", "openai-compatible"]
openai = []
anthropic = []
google = []
deepseek = ["openai"]
xai = ["openai"]
openai-compatible = ["openai"]

[dependencies]
async-trait = "0.1"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
futures-util = "0.3"
eventsource-stream = "0.2"
base64 = "0.22"
async-stream = "0.3"

[dev-dependencies]
tokio = { version = "1.40", features = ["full", "macros", "rt-multi-thread"] }
wiremock = "0.6"
dotenvy = "0.15"

[lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"
unused_qualifications = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
missing_docs_in_private_items = "warn"
