[package]
name = "qai-google"
description = "Google Gemini provider for the QAI SDK — chat, streaming, tool calling, and vision"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
qai-core = { path = "../qai-core", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
futures-util = "0.3"
eventsource-stream = "0.2"
async-stream = "0.3"
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
