[package]
name = "qai-openai-compatible"
description = "OpenAI-compatible provider for the QAI SDK — connect to any API endpoint that follows the OpenAI chat completions format"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
qai-core = { path = "../qai-core", version = "0.1.0" }
qai-openai = { path = "../qai-openai", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
