[package]
name = "qai-openai"
description = "OpenAI provider for the QAI SDK — GPT chat, DALL-E images, Whisper transcription, TTS speech, embeddings, and Responses API"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
qai-core = { path = "../qai-core", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
futures-util = "0.3"
eventsource-stream = "0.2"
async-stream = "0.3"
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

tracing = { workspace = true }

[dev-dependencies]
qai-test-utils = { path = "../qai-test-utils", version = "0.1.0" }
tokio = { workspace = true }
serde_json = { workspace = true }
