[package]
name = "qai-test-utils"
description = "Test utilities for the QAI SDK (internal, not published)"
version.workspace = true
edition = "2024"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
qai-core = { path = "../qai-core", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }

tracing = { workspace = true }
wiremock = "0.6"
